--- a/app/src/main/res/layout/content_loan_payback_scheduled.xml
+++ b/app/src/main/res/layout/content_loan_payback_scheduled.xml
@@ -1,11 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:showIn="@layout/activity_loan_payback_scheduled"
     tools:context=".loanHistory.view.LoanPaybackScheduledActivity"
-    tools:showIn="@layout/activity_loan_payback_scheduled">
+    android:layout_margin="@dimen/_5sdp"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/rl_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:padding="@dimen/_3sdp"
+
+        >
+
+        <ImageView
+            android:contentDescription="@string/app_name"
+            app:srcCompat="@drawable/ic_loan_amount_icon"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".15"
+            />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".45"
+            android:orientation="vertical"
+            >
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:textSize="@dimen/_12sdp"
+                android:textColor="@color/colorSemiBlack"
+                android:text="@string/payment_scheduled"
+                />
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txt_total_payback"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:textSize="@dimen/_13sdp"
+                android:textColor="@color/colorApp"
+
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".40"
+            android:gravity="center"
+
+            >
+
+            <com.app.l_pesa.common.CustomButtonRegular
+                android:id="@+id/button_pay_all"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_32sdp"
+                android:text="@string/pay_full_amount"
+                android:background="@drawable/bg_button_green"
+                android:textAllCaps="false"
+                android:gravity="center"
+                android:textColor="#FFFFFFFF"
+                android:textSize="@dimen/_11sdp"
+                />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rlPayback"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_5sdp"
+           />
+    </LinearLayout>
+
+
+
+    <!--<RelativeLayout
+        android:id="@+id/rl_show_content"
+        android:layout_below="@+id/rl_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:background="@drawable/bg_rectangle"
+        android:visibility="gone"
+        >
+
+        <ImageView
+            android:id="@+id/img_icon"
+            android:layout_width="match_parent"
+            android:layout_height="65dp"
+            app:srcCompat="@drawable/ic_no_loan_icon"
+            android:layout_margin="7dp"
+            />
+
+        <util.CustomTextView
+            android:layout_below="@+id/img_icon"
+            android:id="@+id/txt_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/_15sdp"
+            android:text="You haven't applied for any loans yet from L-Pesa. Start your journey to financial freedom with the first loan from L-Pesa."
+            android:gravity="center|left"
+            android:layout_margin="10dp"
+            />
+
+        <TextView
+
+            android:id="@+id/txt_loan_apply"
+            android:textColor="@color/semi_white"
+            android:gravity="center"
+            android:background="@drawable/rounded_background"
+            android:layout_width="125dp"
+            android:layout_height="35dp"
+            android:layout_below="@+id/txt_content"
+            android:textSize="@dimen/_13sdp"
+            android:fontFamily="@fonts/Roboto-Thin"
+            android:text="Apply Now"
+            android:layout_margin="10dp"
+            android:layout_centerInParent="true"
+            />
+
+
+    </RelativeLayout>-->
+
+</LinearLayout>
