--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -255,7 +255,7 @@
             android:textSize="@dimen/_16sdp"
             android:textColor="@color/colorWhite"
             android:textAllCaps="true"
-            android:background="@drawable/bg_yellow_bg"
+            android:background="@drawable/bg_button_yellow"
             android:textStyle="bold"
             tools:ignore="NestedWeights" />
 
