--- a/app/src/main/res/layout/content_loan_payback_scheduled.xml
+++ b/app/src/main/res/layout/content_loan_payback_scheduled.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:showIn="@layout/activity_loan_payback_scheduled"
+    tools:context=".loanHistory.view.LoanPaybackScheduledActivity">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_loan_payback_scheduled"
-    tools:context=".loanHistory.view.LoanPaybackScheduledActivity"
     android:layout_margin="@dimen/_5sdp"
     android:id="@+id/llRoot"
     android:orientation="vertical">
