--- a/app/src/main/res/layout/content_loan_history_details.xml
+++ b/app/src/main/res/layout/content_loan_history_details.xml
@@ -974,7 +974,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:text="@string/payment_scheduled"
+                            android:text="@string/payment_schedule"
                             android:textColor="@color/colorWhite"
                             android:textSize="@dimen/_10sdp" />
 
