--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -75,17 +75,16 @@
                     android:layout_marginTop="@dimen/_8sdp"
                     android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView3"
-                    app:layout_constraintRight_toLeftOf="@+id/textView2"
+                    app:layout_constraintRight_toLeftOf="@+id/txtPhone"
                     app:layout_constraintStart_toEndOf="@+id/imgProfile"
                     app:layout_constraintTop_toTopOf="@+id/imgProfile"
                     app:srcCompat="@drawable/ic_call_icon" />
 
                 <com.app.l_pesa.common.CommonTextRegular
-                    android:id="@+id/textView2"
+                    android:id="@+id/txtPhone"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_5sdp"
-                    android:text="@string/contact_no"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_13sdp"
                     app:fontFamily="@font/montserrat"
@@ -103,19 +102,18 @@
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toBottomOf="@+id/imgProfile"
-                    app:layout_constraintRight_toLeftOf="@+id/textView3"
+                    app:layout_constraintRight_toLeftOf="@+id/txtCreditScore"
                     app:layout_constraintStart_toEndOf="@+id/imgProfile"
                     app:layout_constraintTop_toBottomOf="@+id/imageView2"
                     app:srcCompat="@drawable/ic_credit_score_icon" />
 
                 <com.app.l_pesa.common.CommonTextRegular
-                    android:id="@+id/textView3"
+                    android:id="@+id/txtCreditScore"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_6sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
-                    android:text="@string/credit_score"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_13sdp"
                     app:fontFamily="@font/montserrat"
@@ -190,7 +188,7 @@
                     android:layout_marginEnd="@dimen/_10sdp"
                     android:layout_marginBottom="@dimen/_12sdp"
                     android:background="@color/colorGreyLight"
-                    app:layout_constraintBottom_toTopOf="@+id/textView4"
+                    app:layout_constraintBottom_toTopOf="@+id/txtDOB"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -204,18 +202,17 @@
                     android:layout_marginTop="@dimen/_12sdp"
                     android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView7"
-                    app:layout_constraintRight_toLeftOf="@+id/textView4"
+                    app:layout_constraintRight_toLeftOf="@+id/txtDOB"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintVertical_chainStyle="spread"
-                    app:srcCompat="@drawable/ic_date_ofbirth_icon" />
+                    app:srcCompat="@drawable/ic_date_of_birth_icon" />
 
                 <com.app.l_pesa.common.CommonTextRegular
-                    android:id="@+id/textView4"
+                    android:id="@+id/txtDOB"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:text="@string/date_of_birth"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
                     app:fontFamily="@font/montserrat"
@@ -232,18 +229,17 @@
                     android:layout_marginTop="@dimen/_5sdp"
                     android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView8"
-                    app:layout_constraintRight_toLeftOf="@+id/textView5"
+                    app:layout_constraintRight_toLeftOf="@+id/txtGender"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView6"
                     app:srcCompat="@drawable/ic_gender_icon" />
 
                 <com.app.l_pesa.common.CommonTextRegular
-                    android:id="@+id/textView5"
+                    android:id="@+id/txtGender"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:text="@string/gender"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
                     app:fontFamily="@font/montserrat"
@@ -260,18 +256,17 @@
                     android:layout_marginTop="@dimen/_5sdp"
                     android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView9"
-                    app:layout_constraintRight_toLeftOf="@+id/textView7"
+                    app:layout_constraintRight_toLeftOf="@+id/txtMartialStatus"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView7"
                     app:srcCompat="@drawable/ic_marital_status_icon" />
 
                 <com.app.l_pesa.common.CommonTextRegular
-                    android:id="@+id/textView7"
+                    android:id="@+id/txtMartialStatus"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:text="@string/marital_status"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
                     app:fontFamily="@font/montserrat"
@@ -289,18 +284,17 @@
                     android:layout_marginBottom="@dimen/_11sdp"
                     android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintRight_toLeftOf="@+id/textView8"
+                    app:layout_constraintRight_toLeftOf="@+id/txtMotherName"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView8"
-                    app:srcCompat="@drawable/ic_mother_maidname_icon" />
+                    app:srcCompat="@drawable/ic_mother_name_icon" />
 
                 <com.app.l_pesa.common.CommonTextRegular
-                    android:id="@+id/textView8"
+                    android:id="@+id/txtMotherName"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:text="@string/mother_maiden_name"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
                     app:fontFamily="@font/montserrat"
